assets/css/global.css
body {
  font-family: Roboto, sans-serif;
  margin: 0;
  padding: 0;
}
header {
  background-color: #333;
  color: white;
  padding: 20px;
  text-align: center;
}
h1 {
  margin: 0;
}
nav {
  background-color: #eee;
  overflow: hidden;
}
ul {
  list-style: none;
  margin: 0;
  padding: 0;
}
li {
  float: left;
}
a.navbar {
  color: #333;
  display: block;
  padding: 20px;
  text-decoration: none;
}
a.navbar:hover {
  background-color: #ddd;
}
main {
  margin: 20px;
}
h2 {
  margin-top: 0;
}
h3 {
  margin-top: 0;
}
footer {
  background-color: #333;
  color: red;
  padding: 20px;
  text-align: center;
}
dt {
  text-align:center;
}

dl {
  margin: 0 5px 0;
}

